--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "D": "^1.0.0",
